--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,11 @@ body {
   margin: 0;
   font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
   Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #0A0B10;
+  background-color: #000000;
   color: white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #0A0B10;
+  background-color: #000000;
   color: white;
 }
 
